test/e2e/chainsaw/common/_step_templates/apply-assert-aigatewayConsumerCredential-apikey.yaml
# Template for creating a Secret + an AIGatewayConsumerCredential of type api-key,
# and asserting the credential reaches Programmed=True.
#
# Required bindings:
#   - credential_name: Name of the AIGatewayConsumerCredential to create.
#   - namespace: Namespace where the Secret and AIGatewayConsumerCredential will be created.
#   - consumer_name: Name of the AIGatewayConsumer this credential belongs to (same namespace).
#   - secret_name: Name of the Secret to create for the api-key value.
#   - api_key_value: The plaintext api-key value to store in the Secret.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-assert-aigateway-consumercredential-apikey
spec:
  try:
    - apply:
        resource:
          apiVersion: v1
          kind: Secret
          metadata:
            name: ($secret_name)
            namespace: ($namespace)
            labels:
              konghq.com/secret: "true"
          type: Opaque
          stringData:
            api-key: ($api_key_value)
    - apply:
        resource:
          apiVersion: konnect.konghq.com/v1alpha1
          kind: AIGatewayConsumerCredential
          metadata:
            name: ($credential_name)
            namespace: ($namespace)
          spec:
            aiGatewayConsumerRef:
              type: namespacedRef
              namespacedRef:
                name: ($consumer_name)
            apiSpec:
              name: ($credential_name)
              displayName: ($credential_name)
              type: api-key
              apiKey:
                type: secretRef
                secretRef:
                  name: ($secret_name)
                  key: api-key
    - assert:
        resource:
          apiVersion: konnect.konghq.com/v1alpha1
          kind: AIGatewayConsumerCredential
          metadata:
            name: ($credential_name)
            namespace: ($namespace)
          status:
            (conditions[?type == 'Programmed']):
              - status: 'True'
            (id != null): true
